2009-12-24  Shu Chang  <Chang.Shu@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] Fix memory leak by deleting instance of ThreadPrivate
        in function waitForThreadCompletion(), synchronously, or in
        detachThread(), asynchronously.
        https://bugs.webkit.org/show_bug.cgi?id=32614

        * wtf/qt/ThreadingQt.cpp:
        (WTF::waitForThreadCompletion):
        (WTF::detachThread):


Canonical link: https://commits.webkit.org/43963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52550 268f45cc-cd09-0410-ab3c-d52691b4dbfc